syntax = "proto3";
option go_package = "./proto";
package home;

message Home {
    string home_num = 1;
}